デザイン微調整

--- a/app/assets/stylesheets/blocks/admin/_admin-table.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-table.sass
@@ -50,6 +50,11 @@
   &.is-text-align-center
     text-align: center
 
+.admin-table__item-logo-image
+  border: solid 1px $border
+  width: 5rem
+  border-radius: .25rem
+
 .admin-table-item__body
   border-radius: .25rem
   background-color: $base
