--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -34,6 +34,9 @@ $header-height: 3.125rem
   width: 3rem
   +position(relative)
   display: flex
+  &.has-no-count
+    opacity: .4
+    pointer-events: none
 
 .header-notifications-item__body
   width: 100%
