--- a/app/assets/stylesheets/blocks/thread/_thread-comments.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comments.sass
@@ -26,6 +26,7 @@ $thread-header-author: 3.5rem
   +size(3.5rem)
   object-fit: cover
   border-radius: 50%
+  +icon-role-style
 
 .thread-comment__title
   +text-block(1rem 1.4)
