--- a/app/assets/stylesheets/blocks/user/_user-profile.sass
+++ b/app/assets/stylesheets/blocks/user/_user-profile.sass
@@ -34,6 +34,8 @@
 .user-profile__company-logo
   max-width: 5rem
   +position(absolute, right 0, top 0)
+  border-radius: .25rem
+  border: solid 1px $border
   +media-breakpoint-down(lg)
     max-width: 100%
     max-height: 1.875rem
