--- a/app/views/admin/_admin_page_tabs.html.slim
+++ b/app/views/admin/_admin_page_tabs.html.slim
@@ -14,6 +14,6 @@
           admin_categories_path,
           class: "page-tabs__item-link #{current_link /^admin-categories/}"
       li.page-tabs__item
-        = link_to "会社",
+        = link_to "企業",
           admin_companies_path,
           class: "page-tabs__item-link #{current_link /^admin-companies/}"
