--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -11,7 +11,7 @@
     - if current_user.admin?
       li.header-links__item
         label.header-links__link(for="header-admin-menu")
-          i.fas.fa-crown
+          i.fas.fa-poo
           .header-links__link-label Admin
         input.a-toggle-checkbox#header-admin-menu(type="checkbox")
         .header-dropdown
