--- a/app/assets/stylesheets/_common-imports.sass
+++ b/app/assets/stylesheets/_common-imports.sass
@@ -44,6 +44,7 @@
 @import "mixins/short-text-style"
 @import "mixins/button"
 @import "mixins/badge"
+@import "mixins/user-role"
 
 ////////////
 // initializers
