--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -44,6 +44,7 @@
   float: left
   margin-right: .75rem
   background-color: $base
+  +icon-role-style
   .recent-reports-item.is-wip &
     opacity: .6
 
