--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -15,6 +15,9 @@
   +media-breakpoint-up(md)
     display: flex
     align-items: flex-start
+  +media-breakpoint-down(sm)
+    width: 100%
+
 
 .thread-list-item__label
   +position(absolute, left 0, top 0)
@@ -57,6 +60,7 @@
     object-fit: cover
   .thread-list-item.is-wip &
     opacity: .6
+  +icon-role-style
 
 .thread-list-item__header
   display: flex
@@ -104,6 +108,7 @@
   display: flex
   +media-breakpoint-down(sm)
     margin-left: 0
+    margin-top: .5rem
     margin-bottom: .25rem
   .thread-list-item__header:hover &
     +position(relative, 1)
