--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -49,6 +49,7 @@ $thread-header-author: 6rem
   background-color: $base
   +media-breakpoint-down(sm)
     box-shadow: white 0 0 0 .375rem
+  +icon-role-style
 
 .thread__description
   padding: 1.25rem 2rem
