--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -6,7 +6,7 @@ nav.global-nav
       .global-nav-current-user
         = link_to user_path(current_user), class: "global-nav-current-user__link"
           .global-nav-current-user__icon
-            = image_tag current_user.avatar_image, class: "is-#{current_user.role}"
+            = image_tag current_user.avatar_image, class: "global-nav-current-user__icon is-#{current_user.role}"
     .global-nav-links.is-contents-links
       ul.global-nav-links__items
         li.global-nav-links__item
@@ -64,7 +64,7 @@ nav.global-nav
           = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "global-nav-links__link", target: "_blank" do
             .global-nav-links__link-icon
               i.fas.fa-desktop
-            .global-nav-links__link-label席予約
+            .global-nav-links__link-label 席予約
         li.global-nav-links__item.is-hidden-md-up
           = link_to courses_path, class: "global-nav-links__link #{current_link /^courses-index/}" do
             .global-nav-links__link-icon
