--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -5,7 +5,7 @@
         = practice.title
     - if current_user
       .practice-status
-        - status = practice.status(current_user)
+        - status = practice.status_by_learnings(@learnings)
         .js-learning-status(data-practice-id="#{practice.id}" data-status="#{status}")
 
   - if practice.started_students.any?
