通知が100件以上だったら99+と表示する
通知自体も直近の99件だけ表示するようにした

--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -73,7 +73,7 @@
           .header-notification-icon
             - if current_user.notifications.unreads.exists?
               .header-notification-count.a-notification-count
-                = current_user.notifications.unreads.count
+                = notification_unreads_count_badge
             i.fas.fa-bell
             .header-links__link-label 通知
       - if current_user.notifications.unreads.exists?
