ヘッダーに全てを既読にするボタンを追加

--- a/app/assets/stylesheets/blocks/header/_header-dropdown.sass
+++ b/app/assets/stylesheets/blocks/header/_header-dropdown.sass
@@ -43,5 +43,8 @@
   &:hover
     background-color: $background-more-tint
 
+.header-dropdown__footer-link:not(:last-child)
+  border-bottom: solid 1px $background
+
 .header-dropdown__background
   +position(fixed, left 0, top 0, right 0, bottom 0, 2)
