--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html.is-application lang="ja"
     = javascript_pack_tag "application"
     = csrf_meta_tags
     = render "favicons"
+    link(rel="manifest" href="/manifest.json")
     - if page_classes.include?("welcome")
       = stylesheet_link_tag "welcome", media: "all"
       - if page_classes.include?("welcome-home")
