--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -9,6 +9,7 @@ html.is-application lang="ja"
     = javascript_pack_tag "application"
     = csrf_meta_tags
     = render "favicons"
+    link(rel="manifest" href="/manifest.json")
     = stylesheet_link_tag "welcome", media: "all"
     - if page_classes.include?("welcome-home")
       link(rel="canonical" href="https://bootcamp.fjord.jp/")
