--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,8 +8,8 @@ html.is-application lang="ja"
     = javascript_include_tag "application"
     = javascript_pack_tag "application"
     = csrf_meta_tags
+    = render "pwa"
     = render "favicons"
-    link(rel="manifest" href="/manifest.json")
     - if page_classes.include?("welcome")
       = stylesheet_link_tag "welcome", media: "all"
       - if page_classes.include?("welcome-home")
