--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -8,6 +8,7 @@ html.is-application lang="ja"
     = javascript_include_tag "application"
     = javascript_pack_tag "application"
     = csrf_meta_tags
+    = render "pwa"
     = render "favicons"
     link(rel="manifest" href="/manifest.json")
     = stylesheet_link_tag "welcome", media: "all"
