二重サブミットを防止
HTML的な対策とRubyとしての対策の両方を実施。

--- a/app/views/card/_form.html.slim
+++ b/app/views/card/_form.html.slim
@@ -9,4 +9,4 @@
   .form-actions
     ul.form-actions__items
       li.form-actions__item.is-main
-        button.a-button.is-lg.is-warning.is-block カードを登録
+        = submit_tag "カードを登録", class: "a-button is-lg is-warning is-block"
