--- a/app/views/notification_mailer/mentioned.html.slim
+++ b/app/views/notification_mailer/mentioned.html.slim
@@ -1,2 +1,2 @@
-= render "notification_mailer_template", title: "#{@mention.user.login_name}からメンションがありました", link_url: notification_url(@notification), link_text: "このメンションへ" do
-  = simple_format(@mention.description)
+= render "notification_mailer_template", title: "#{@comment.user.login_name}からメンションがありました", link_url: notification_url(@notification), link_text: "このメンションへ" do
+  = simple_format(@comment.description)
