--- a/app/views/notification_mailer/post_announcement.html.slim
+++ b/app/views/notification_mailer/post_announcement.html.slim
@@ -1,2 +1,2 @@
-= render "notification_mailer_template", title: @announce.title, link_url: notification_url(@notification), link_text: "このお知らせへ" do
-  = simple_format(@announce.description)
+= render "notification_mailer_template", title: @announcement.title, link_url: notification_url(@notification), link_text: "このお知らせへ" do
+  = simple_format(@announcement.description)
