mail内のリンクを変更
開発環境でも本番環境へのリンクになっていたため。

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -24,9 +24,7 @@
         <tbody>
           <tr>
             <td style="border:0px solid #000;border-radius:24px;color:#fff;cursor:auto;padding:12px 32px;"
-              align="center" valign="middle" bgcolor="#30ABDB"><a href="https://bootcamp.fjord.jp/login"
-                style="text-decoration:none; background:#30ABDB; color:#fff; font-family: sans-serif; font-size:14px; font-weight:bold;line-height:140%; text-transform:none; margin:0px;"
-                target="_blank">フィヨルドブートキャンプへ</a></td>
+              align="center" valign="middle" bgcolor="#30ABDB"><%= link_to "フィヨルドブートキャンプへ", login_url, target: "_blank", style: "text-decoration:none; background:#30ABDB; color:#fff; font-family: sans-serif; font-size:14px; font-weight:bold;line-height:140%; text-transform:none; margin:0px;" %></td>
           </tr>
         </tbody>
       </table>
